--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ subjects:
 - !lcsh 'Children''s literature, American -- Periodicals'
 - !lcc 'PZ'
 - !lcc 'AP'
+- GITenberg
 title: "The Nursery, February 1873, Vol. XIII.\r\nA Monthly Magazine for Youngest\
   \ Readers"
 url: http://www.gutenberg.org/ebooks/24475
